--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,7 +1,11 @@
 
 <h1>Hello, Rails!</h1>
+<%= link_to 'My Blog', controller: 'articles' %>
 
 <h1>Listing articles</h1>
+
+
+<%= link_to 'New article', new_article_path %>
 
 <table>
   <tr>
@@ -18,3 +22,10 @@
     </tr>
   <% end %>
 </table>
+
+
+<%= form_with scope: :article, url: articles_path, local: true do |form| %>
+  ...
+<% end %>
+
+<%= link_to 'Back', articles_path %>
