--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -21,7 +21,7 @@
       <td><%= link_to 'Show', article_path(article) %></td>
       <td><%= link_to 'Edit', edit_article_path(article) %></td>
       <td><%= link_to 'Destroy', article_path(article),
-                    method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                    method: :delete, data: {confirm: 'Are you sure?' } ,title: "藤井からのお知らせ" %></td>
     </tr>
   <% end %>
 </table>
