--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,10 +1,10 @@
 
 <p>
-  <strong>Title:</strong>
+  <strong>Name:</strong>
   <%= @picture.title %>
 </p>
 
 <p>
-  <strong>Text:</strong>
+  <strong>picture:</strong>
   <%= @picture.text %>
 </p>
