まだ不親切

--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,10 +1,12 @@
 
 <p>
-  <strong>Name:</strong>
+  <strong>name:</strong>
   <%= @picture.title %>
 </p>
 
 <p>
-  <strong>picture:</strong>
+  <strong>Pictures:</strong>
   <%= @picture.text %>
 </p>
+
+<%= link_to 'Back', pictures_path %>
