--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,17 +1,4 @@
 <h1>Pictures#index</h1>
-<p>Find me in app/views/pictures/index.html.erb</p>
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Pictures</th>
-    <th></th>
-  </tr>
+<%= link_to 'My Blog', controller: 'pictures' %>
 
-  <% @pictures.each do |picture| %>
-    <tr>
-      <td><%= picture.title %></td>
-      <td><%= picture.text %></td>
-      <td><%= link_to 'Show', picture_path(picture) %></td>
-    </tr>
-  <% end %>
-</table>
+<%= link_to 'New picture', new_picture_path %>
