--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -16,4 +16,12 @@
   <p>
     <%= form.submit %>
   </p>
+
+
+  <%= form_with scope: :picture, url: pictures_path, local: true do |form| %>
+  
+<% end %>
+
+<%= link_to 'Back', pictures_path %>
+
 <% end %>
