--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,4 +1,18 @@
 <h1>Pictures#index</h1>
-<%= link_to 'My Blog', controller: 'pictures' %>
+<p>Find me in app/views/pictures/index.html.erb</p>
+<table>
+  <tr>
+    <th>Name</th>
+    <th>Pictures</th>
+    <th></th>
+  </tr>
 
-<%= link_to 'New picture', new_picture_path %>
+<% @pictures.each do |picture| %>
+
+   <tr>
+     <td><%= picture.title %></td>
+     <td><%= picture.text %></td>
+     <td><%= link_to 'Show', picture_path(picture) %></td>
+   </tr>
+ <% end %>
+</table>
