--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -3,6 +3,18 @@
 
 <%= form_with scope: :picture, url: pictures_path, local: true do |form| %>
 
+<% if @picture.errors.any? %>
+<div id="error_explanation">
+  <h2><%= pluralize(@picture.errors.count, "error") %> prohibited
+    this article from being saved:</h2>
+  <ul>
+  <% @picture.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+  <% end %>
+  </ul>
+</div>
+<% end %>
+
   <p>
     <%= form.label :title %><br>
     <%= form.text_field :title %>
@@ -19,7 +31,7 @@
 
 
   <%= form_with scope: :picture, url: pictures_path, local: true do |form| %>
-  
+
 <% end %>
 
 <%= link_to 'Back', pictures_path %>
