--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,5 +1,8 @@
 <h1>Pictures#index</h1>
 <p>Find me in app/views/pictures/index.html.erb</p>
+
+<%= link_to 'New picture', new_picture_path %>
+
 <table>
   <tr>
     <th>Name</th>
@@ -13,6 +16,7 @@
      <td><%= picture.title %></td>
      <td><%= picture.text %></td>
      <td><%= link_to 'Show', picture_path(picture) %></td>
+     <td><%= link_to 'Edit', edit_picture_path(picture) %></td>
    </tr>
  <% end %>
 </table>
