--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -6,7 +6,7 @@
 <% if @picture.errors.any? %>
 <div id="error_explanation">
   <h2><%= pluralize(@picture.errors.count, "error") %> prohibited
-    this article from being saved:</h2>
+    this picture from being saved:</h2>
   <ul>
   <% @picture.errors.full_messages.each do |msg| %>
     <li><%= msg %></li>
