--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -17,6 +17,8 @@
      <td><%= picture.text %></td>
      <td><%= link_to 'Show', picture_path(picture) %></td>
      <td><%= link_to 'Edit', edit_picture_path(picture) %></td>
+     <td><%= link_to 'Destroy', picture_path(picture),
+                   method: :delete, data: { confirm: 'Are you sure?' } %></td>
    </tr>
  <% end %>
 </table>
