--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -1,39 +1,7 @@
 
 <h1>New Pictures!</h1>
 
-<%= form_with scope: :picture, url: pictures_path, local: true do |form| %>
 
-<% if @picture.errors.any? %>
-<div id="error_explanation">
-  <h2><%= pluralize(@picture.errors.count, "error") %> prohibited
-    this picture from being saved:</h2>
-  <ul>
-  <% @picture.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li>
-  <% end %>
-  </ul>
-</div>
-<% end %>
-
-  <p>
-    <%= form.label :title %><br>
-    <%= form.text_field :title %>
-  </p>
-
-  <p>
-    <%= form.label :text %><br>
-    <%= form.text_area :text %>
-  </p>
-
-  <p>
-    <%= form.submit %>
-  </p>
-
-
-  <%= form_with scope: :picture, url: pictures_path, local: true do |form| %>
-
-<% end %>
+<%= render 'form' %>
 
 <%= link_to 'Back', pictures_path %>
-
-<% end %>
