--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -9,5 +9,33 @@
   <%= @picture.text %>
 </p>
 
+<h2>Comments</h2>
+<% @picture.comments.each do |comments| %>
+  <p>
+    <strong>Commenter:</strong>
+    <%= comment.commenter %>
+  </p>
+
+  <p>
+    <strong>Comment:</strong>
+    <%= comment.body %>
+  </p>
+<% end %>
+
+<h2>Add a comment:</h2>
+<%= form_with(model: [ @picture, @picture.comments.build ], local: true) do |form| %>
+  <p>
+    <%= form.label :commenter %><br>
+    <%= form.text_field :commenter %>
+  </p>
+  <p>
+    <%= form.label :body %><br>
+    <%= form.text_area :body %>
+  </p>
+  <p>
+    <%= form.submit %>
+  </p>
+<% end %>
+
 <%= link_to 'Back', pictures_path %>
 | <%= link_to 'Edit', edit_picture_path(@picture) %>
