--- a/app/views/picture_comments/_picture_comment.html.erb
+++ b/app/views/picture_comments/_picture_comment.html.erb
@@ -1,12 +1,12 @@
 
 <p>
   <strong>Commenter:</strong>
-  <%= comment.commenter %>
+  <%= picture_comment.commenter %>
 </p>
 
 <p>
   <strong>Comment:</strong>
-  <%= comment.body %>
+  <%= picture_comment.body %>
 </p>
 
 <p>
