--- a/app/views/picture_comments/_picture_comment.html.erb
+++ b/app/views/picture_comments/_picture_comment.html.erb
@@ -10,7 +10,7 @@
 </p>
 
 <p>
-  <%= link_to 'Destroy Comment', [comment.picture, picture_comment],
+  <%= link_to 'Destroy Comment', [picture_comment.picture, picture_comment],
                method: :delete,
                data: { confirm: 'Are you sure?' } %>
 </p>
