--- a/app/views/uploader/index.html.erb
+++ b/app/views/uploader/index.html.erb
@@ -5,5 +5,7 @@
     <ul>
       <% UploadFile.all.reverse_order.each do |upload| %>
         <li><%= link_to upload.name, action: "download", id: upload.id %>
+        <td><%= link_to 'Destroy', upload_path(upload),
+                    method: :delete, data: { confirm: 'Are you sure?' } %></td>
       <% end %>
     </ul>
