--- a/app/views/uploader/form.html.erb
+++ b/app/views/uploader/form.html.erb
@@ -4,7 +4,8 @@
 <% @upload = UploadFile.new %>
    <%= form_for @upload, :url => {:action => :upload} do |f| %>
 
-     <%= f.label :name, "name" %>
+     
+     <%= f.label :title, "name" %>
      <%= f.text_field :name %><br>
      <br>
      <%= f.label :file %>
