--- a/app/views/uploader/show.html.erb
+++ b/app/views/uploader/show.html.erb
@@ -1,15 +1,15 @@
 <p>
   <strong>Title:</strong>
-  <%= @upload.title %>
+  <%= @upload_file.title %>
 </p>
 
 <p>
   <strong>Text:</strong>
-  <%= @upload.text %>
+  <%= @upload_file.text %>
 </p>
 
 <h2>Add a comment:</h2>
-<%= form_with(model: [ @upload, @upload.comments.build ], local: true) do |form| %>
+<%= form_with(model: [ @upload_file, @upload_file.comments.build ], local: true) do |form| %>
   <p>
     <%= form.label :commenter %><br>
     <%= form.text_field :commenter %>
@@ -24,4 +24,4 @@
 <% end %>
 
 <%= link_to 'Back', uploader_index_path %>
-| <%= link_to 'Edit', edit_uploader_path(@upload) %>
+| <%= link_to 'Edit', edit_uploader_path(@upload_file) %>
