--- a/app/views/uploader/form.html.erb
+++ b/app/views/uploader/form.html.erb
@@ -4,10 +4,15 @@
 <% @upload = UploadFile.new %>
    <%= form_for @upload, :url => {:action => :upload} do |f| %>
 
-     
+
      <%= f.label :title, "name" %>
      <%= f.text_field :name %><br>
      <br>
+     <p>
+       <%= f.label :text %><br>
+       <%= f.text_area :text %>
+     <br>
+     </p>
      <%= f.label :file %>
      <%= f.file_field :file %><br>
 <br>
