--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,19 +1,19 @@
 
 <p>
   <strong>Title:</strong>
-  <%= @article.title %>
+  <%= @upload_file.title %>
 </p>
 
 <p>
   <strong>Text:</strong>
-  <%= @article.text %>
+  <%= @upload_file.text %>
 </p>
 
 <h2>Comments</h2>
-<%= render @article.comments %>
+<%= render @upload_file.comments %>
 
 <h2>Add a comment:</h2>
 <%= render "comments/form" %>
 
-<%= link_to 'Edit Article', edit_article_path(@article) %> |
-<%= link_to 'Back to Articles', articles_path %>
+<%= link_to 'Edit', edit_uploader_path(@upload_file) %> |
+<%= link_to 'Back', uploader_path %>
