--- a/app/views/uploader/index.html.erb
+++ b/app/views/uploader/index.html.erb
@@ -8,4 +8,13 @@
         <td><%= link_to 'Destroy', uploader_delete_path(upload),
                     method: :delete, data: { confirm: 'Are you sure?' } %></td>
       <% end %>
+
+      <table>
+        <tr>
+      <% @upload_file.each do |upload| %>
+         
+         </tr>
+       <% end %>
+     </table>
+
     </ul>
